# edk2-guid-process-sys

./: .gitmodules  Cargo.toml  LICENSE.txt  README.md  build.rs
src/: bortli.rs  crc32.rs  lib.rs  lzma.rs  tiano.rs  wrapper.h
src/edk2/BrotliCompress/: BrotliCompress.c
src/edk2/GenCrc32/: GenCrc32.c
src/edk2/TianoCompress/: TianoCompress.c
test/: GenCrc32  LzmaCompress  TianoCompress
