[package]
name = "edk2-guid-process-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["crc32fast"]
# Use crc32fast from crates.io instead of EDk2 source
crc32fast = ["dep:crc32fast"]

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.83"

[dev-dependencies]
crc32fast = "1.4.2"
rand = "0.8.5"

[dependencies]
crc32fast = { version = "1.4.2", optional = true }
scopeguard = "1.2.0"
thiserror = "1.0.61"
